# opsclaw

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.debian  Dockerfile.debian.ci  Justfile  NOTICE  README.md  SECURITY.md  TIER2_STATUS.md  clippy.toml  docker-compose.yml  install.sh  setup.bat
.cargo/: config.toml
.gemini/: style-guide.md
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  ci.yml  discord-release.yml  docs-deploy.yml  master-branch-flow.md  pub-aur.yml  pub-homebrew-core.yml  pub-scoop.yml  publish-crates-auto.yml  publish-crates.yml  release-beta-on-push.yml  release-stable-manual.yml  tweet-release.yml
api/: crates.js  help.html  settings.html  src-files.js
api/aardvark_sys/: index.html
api/opsclaw/: all.html  enum.AuthCommands.html  enum.ChannelCommands.html  enum.Commands.html  enum.CompletionShell.html  enum.ConfigCommands.html  enum.CronCommands.html  enum.DoctorCommands.html  enum.EnvCommands.html  enum.EstopLevelArg.html  enum.EstopSubcommands.html  enum.GatewayCommands.html  enum.HardwareCommands.html  (+39 more)
crates/opsclaw/: Cargo.toml
crates/opsclaw/benches/: agent_benchmarks.rs
crates/opsclaw/src/: daemon_ext.rs  lib.rs  main.rs  ops_cli.rs  ops_config.rs  secrets.rs
crates/opsclaw/src/oap/: server.rs  types.rs
crates/opsclaw/src/onboard/: mod.rs  wizard.rs
crates/opsclaw/src/openshell/: audit.rs  mod.rs  policy.rs
crates/opsclaw/src/ops/: approval.rs  approval_channel.rs  baseline.rs  context.rs  daemon.rs  diagnosis.rs  digest.rs  doctor.rs  escalation.rs  event_stream.rs  incident_search.rs  log_sources.rs  mod.rs  monitor_log.rs  notifier.rs  postmortem.rs  probes.rs  runbooks.rs  setup.rs  snapshots.rs  status.rs  wizard.rs
crates/opsclaw/src/ops/approval_channels/: cli.rs  mod.rs  slack.rs  telegram.rs
crates/opsclaw/src/ops/data_sources/: docker_inspect.rs  elasticsearch.rs  git_deploy.rs  github.rs  jaeger.rs  mod.rs  prometheus.rs  seq.rs
crates/opsclaw/src/security/: mod.rs  opsclaw_secrets.rs
crates/opsclaw/src/skillforge/: integrate.rs  mod.rs  scout.rs
crates/opsclaw/src/tools/: a2a_server.rs  a2a_tool.rs  a2a_types.rs  approval_gate.rs  azure_service_bus_tool.rs  cert_tool.rs  cloudflare_tool.rs  db_diagnostic.rs  discovery.rs  dns_tool.rs  docker_tool.rs  elk_tool.rs  firewall_tool.rs  github_tool.rs  jaeger_tool.rs  kube_tool.rs  loki_tool.rs  mod.rs  monitor_tool.rs  monitoring.rs  opsclaw_notify.rs  pagerduty_tool.rs  postgres_tool.rs  posthog_tool.rs  prometheus_tool.rs  rabbitmq_tool.rs  registry.rs  ssh_command_runner.rs  ssh_tool.rs  systemd_tool.rs
crates/opsclaw/tests/component/: config_integration.rs  discovery_scan.rs  mod.rs  monitoring_cli.rs  monitoring_loop.rs  notification.rs  otel_dependency_feature_regression.rs  ssh_command_runner.rs  ssh_tool.rs  target_config.rs
crates/opsclaw/tests/fixtures/config/: full.toml  hierarchical.toml  minimal.toml
crates/opsclaw/tests/integration/: agent.rs  channel_matrix.rs  mod.rs  ops_pipeline.rs
crates/opsclaw/tests/live/: gemini_fallback_oauth_refresh.rs  providers.rs
crates/opsclaw/tests/manual/telegram/: test_telegram_integration.sh  testing-telegram.md
crates/zeroclawlabs/: Cargo.toml  build.rs
crates/zeroclawlabs/src/: i18n.rs  lib.rs
crates/zeroclawlabs/src/agent/: loop_.rs
crates/zeroclawlabs/src/channels/: mod.rs
crates/zeroclawlabs/src/config/: schema.rs
crates/zeroclawlabs/src/cron/: scheduler.rs
crates/zeroclawlabs/src/daemon/: mod.rs
crates/zeroclawlabs/src/gateway/: mod.rs  static_files.rs
crates/zeroclawlabs/src/peripherals/: nucleo_flash.rs  uno_q_setup.rs
crates/zeroclawlabs/src/providers/: mod.rs
crates/zeroclawlabs/src/security/: prompt_guard.rs
crates/zeroclawlabs/tests/component/: dockerignore_test.rs
deploy-k8s/: configmap-sample.yaml  deployment-sample.yaml
dev/: README.md  ci.sh  cli.sh  config.harness-test.toml  config.template.toml  docker-compose.ci.yml  docker-compose.yml  recompute_contributor_tiers.sh  test-registry-skills.sh  test-termux-release.sh  test-tui-onboarding.sh  test.sh
docs/: CNAME  autonomy.md  channels.md  cli.md  config.md  environments.md  gateway.md  getting-started.md  hierarchy.md  index.html  k8s.md  memory.md  merging.md  openshell.md  projects.md  providers.md  runbooks.md  secrets.md  simulation.md  skillforge.md  targets.md  testing.md
en/: 404.html  api.html  index.html  philosophy.html  print.html  searcher-c2a407aa.js
es/: 404.html  api.html  index.html  philosophy.html  print.html  searcher-c2a407aa.js
example-plugin/: Cargo.toml  manifest.toml
examples/: config.example.toml  myapp.toml  sacra.toml
fr/: 404.html  api.html  index.html  philosophy.html  print.html  searcher-c2a407aa.js
fuzz/: Cargo.toml
ja/: 404.html  api.html  index.html  philosophy.html  print.html  searcher-c2a407aa.js
python/: README.md  README.vi.md  pyproject.toml
scripts/: 99-act-led.rules  README.md  deploy-rpi.sh  rpi-config.toml  zeroclaw.service
src/: lib.rs  main.rs  migration.rs  ops_cli.rs
tasks/: browser-open-brave-fallback.md  clawhub-huggingface-scouts.md  daemon-restart-failed-tasks.md  digest-silent-errors.md  doctor-data-sources.md  esp32-gpio-input.md  index.md  ms365-encrypted-token-cache.md  nevis-local-jwks.md  openshell-integration.md  pairing-guard-async.md  postmortem-cli.md  robot-kit-docs.md  runbook-unwrap.md  sacra-config.md  sacra-integration-test.md  setup-wizard-data-sources.md  setup-wizard-notifications.md  skillforge-cli.md  test-context.md  test-daemon.md  test-notifier.md  test-ops-cli.md
thoughts/: dev.md  future.md  memory.md  openshell-integration.md  projects.md  security.md  suggestions.md  using.md  vision.md
tool_descriptions/: en.toml  th.toml  zh-CN.toml
web/: index.html  package-lock.json  package.json  vite.config.ts
zh-CN/: 404.html  api.html  introduction.html  philosophy.html  print.html
(+4373 files in other folders)
