[package]
name = "opsclaw"
version = "0.4.3"
edition = "2021"
authors = ["D C P Revere"]
description = "Autonomous SRE agent — monitors your servers and fixes them while you sleep."
repository = "https://github.com/DCPRevere/opsclaw"

[[bin]]
name = "opsclaw"
path = "src/main.rs"

[lib]
name = "opsclaw"
path = "src/lib.rs"

[dependencies]
zeroclaw = { path = "../zeroclaw" }

# Deps used directly by opsclaw modules
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
russh = "0.46"
russh-keys = "0.46"
rustls = "0.23"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }
async-trait = "0.1"
regex = "1.10"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hostname = "0.4.2"
thiserror = "2.0"
parking_lot = "0.12"
directories = "6.0"
schemars = "1.2"
console = "0.16"
toml = "1.0"
glob = "0.3"
which = "8.0"

[dev-dependencies]
tempfile = "3.26"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
scopeguard = "1.2"

[[test]]
name = "component"
path = "tests/test_component.rs"

[[test]]
name = "integration"
path = "tests/test_integration.rs"

[[test]]
name = "system"
path = "tests/test_system.rs"

[[test]]
name = "live"
path = "tests/test_live.rs"

[[bench]]
name = "agent_benchmarks"
harness = false
