[package]
name = "opsclaw"
version = "0.6.2"
edition = "2021"
authors = ["D C P Revere"]
description = "Autonomous SRE agent — monitors your servers and fixes them while you sleep."
repository = "https://github.com/dcprevere/opsclaw"

[[bin]]
name = "opsclaw"
path = "src/main.rs"

[dependencies]
zeroclawlabs = { path = "../.." }
zeroclaw-runtime = { path = "../zeroclaw-runtime" }
zeroclaw-api = { path = "../zeroclaw-api" }
zeroclaw-gateway = { path = "../zeroclaw-gateway" }
zeroclaw-channels = { path = "../zeroclaw-channels" }
zeroclaw-config = { path = "../zeroclaw-config" }
zeroclaw-memory = { path = "../zeroclaw-memory" }

# Deps used directly by opsclaw modules
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.16"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
directories = "6.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
glob = "0.3"
hostname = "0.4.2"
k8s-openapi = { version = "0.24", features = ["v1_32"] }
kube = { version = "0.98", default-features = false, features = ["client", "runtime", "rustls-tls"] }
parking_lot = "0.12"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
russh = "0.46"
russh-keys = "0.46"
rustls = "0.23"
schemars = "1.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
shellexpand = "3.1"
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
toml = "1.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
which = "8.0"

[features]
default = []
plugins-wasm = ["zeroclawlabs/plugins-wasm"]
channel-nostr = []
whatsapp-web = []

[dev-dependencies]
tower = "0.5"
tempfile = "3.26"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
scopeguard = "1.2"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
